--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
                     <img class="obrazek"
                         src="https://images.pexels.com/photos/205961/pexels-photo-205961.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
                         alt="Serial 1">
-
+                    <img class="obrazek"
+                        src="kitty-cat-kitten-pet-45201-removebg-preview.png"
+                        alt="Serial 1">
                 </div>
             </div>
         </div>
