--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
                     <li>Koláče</li>
                     <li>Trubičky</li>
                     <li>Ořechy</li>
-                    <li>Ovoce</li>
+                    <li>Ovoce
                 </ul>
+            </li>
             </div>
 
             <div class="karta kartaprava">
@@ -50,9 +51,7 @@
                     <img class="obrazek"
                         src="https://images.pexels.com/photos/205961/pexels-photo-205961.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
                         alt="Serial 1">
-                    <img class="obrazek"
-                        src="kitty-cat-kitten-pet-45201-removebg-preview.png"
-                        alt="Serial 1">
+                
                 </div>
             </div>
         </div>
