--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
 <li>Koláče</li>
 <li>Trubičky</li>
 <li>Ořechy</li>
-<li>Ovoce
+<li>Marshmallowny</li>
+<li>Mandle v čokoládě</li>
+<li>Jablka v karamelu</li>
+<li>Ovoce v čokoládě/karamelu
 </ul>
 </li>
 </div>
